# five-year-plan-analysis

./: .gitignore  .readthedocs.yml  404.html  Makefile  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
.ipython/profile_default/: history.sqlite
assets/data/: indicators.csv
conf/base/: catalog.yml  parameters.yml
data/02_intermediate/: economic_indicators_all.csv  features_and_bases.csv  features_and_bases_sa.csv  quarterly_features_cbo_imputed.csv  quarterly_features_raw.csv  stationary_guide.xlsx
data/04_model_input/: grangers_matrix.xlsx  possible_endog_variables.json  scaled_feature_correlations.xlsx
data/06_model_output/: soda-forecast.xlsx
data/07_reporting/: revenue_summary.xlsx
docs/: build_docs.sh  conf.py  index.md  install.md  requirements.txt
docs/_scripts/: generate_indicator_table.py
docs/source/: conf.py  fyp_analysis.extras.datasets.rst  fyp_analysis.extras.datasets.taxes.rst  fyp_analysis.extras.rst  fyp_analysis.pipelines.data_processing.indicators.rst  fyp_analysis.pipelines.data_processing.preprocess.rst  fyp_analysis.pipelines.data_processing.rst  fyp_analysis.pipelines.data_processing.stationary.rst  fyp_analysis.pipelines.modeling.correlate.rst  fyp_analysis.pipelines.modeling.predict.rst  fyp_analysis.pipelines.modeling.rst  fyp_analysis.pipelines.rst  fyp_analysis.rst  index.rst  modules.rst  requirements.txt
docs/steps/: intro.md
docs/structure/: intro.md
docs/usage/: interactive.md  overview.md  updates.md
install/: index.html
notebooks/: 01-wage.ipynb  02-sales.ipynb  03-birt.ipynb  03a-net-income.ipynb  03b-gross-receipts.ipynb  03c-birt.ipynb  04-rtt.ipynb  05-parking.ipynb  05a-parking.ipynb  06-amusement.ipynb  07-npt.ipynb  modeling-Copy1.ipynb
notebooks/NH/: 01-wage.ipynb  02-sales.ipynb  03a-net-income.ipynb  03b-gross-receipts.ipynb  03c-birt.ipynb  04-rtt.ipynb  04b-rtt-open-data.ipynb  05a-parking.ipynb  06a-amusement.ipynb  06b-amusement.ipynb  07-npt.ipynb  08-soda.ipynb
notebooks/SD/: 01-wage.ipynb  03a-net-income.ipynb  03b-gross-receipts.ipynb  03c-birt.ipynb  05b-parking.ipynb  06a-amusement.ipynb
notebooks/templates/: 03a-BIRT-net-income-VAR.md  04a-RTT-VAR.md  04b-RTT-prophet.md  08-soda-prophet.md
references/: README.md
references/supplementals/: README.md
src/: MANIFEST.in  requirements.in  requirements.txt  setup.py
src/five_year_plan_analysis/: __init__.py  __main__.py  cli.py  pipeline_registry.py  settings.py
src/fyp_analysis/: __init__.py  (+6 more)
(+371 files in other folders)
