[tool.poetry]
name = "fyp-analysis"
version = "1.0.0"
description = "Revenue projections for the City of Philadelphia’s major tax revenues as part of the Controller’s Office review of the City’s annual Five Year Plan."
authors = ["Nick Hand <nick.hand@phila.gov>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
kedro = "0.18.7"
jupyterlab = "^3.4.2"
notebook = "^6.4.11"
fredapi = "^0.5.0"
loguru = "^0.5"
openpyxl = "^3.0.10"
Quandl = "^3.7.0"
pandas = "^1.4.2"
scikit-learn = "^1.1.1"
matplotlib = "^3.5.2"
cached-property = "^1.5.2"
bls = "^0.3.0"
statsmodels = "^0.13.2"
seaborn = "^0.12"
jupyterlab-code-formatter = "^1.4.11"
carto2gpd = "^1.0.11"
desert = "2022.09.22"
phila-style = "^0.1.1"
tqdm = "^4.64.0"
prophet = "1.1.2"
mkdocs-material = "^9.1.6"
click = "^8.1.3"
jupytext = "^1.14.5"
plotly = "^5.14.1"
ipywidgets = "^8.0.6"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"

[tool.poetry.scripts]
fyp-analysis-run = "fyp_analysis.__main__:main"
fyp-analysis-update = "fyp_analysis.historical:update_quarterly_collections"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.kedro]
package_name = "fyp_analysis"
project_name = "Five Year Plan Analysis"
kedro_init_version = "0.18.7"
